moved header take better notes to center of website using flexbox and added colour to it

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -28,3 +28,4 @@ footer{display: grid;justify-content: center;}
 /* nav{order: 1;} */
 .divclass{order: 1;height: 100vh;}
 h1{margin-top: 0;}
+.mainh1{display:flex; justify-content: center;color:#256993 ;}
