--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -29,3 +29,7 @@ footer{display: grid;justify-content: center;}
 .divclass{order: 1;height: 100vh;}
 h1{margin-top: 0;}
 .mainh1{display:flex; justify-content: center;color:#256993 ;}
+.aboutdoc{display: flex;justify-content: end;color: #256993;font-family: "Quicksand",sans-serif;}
+textarea{width: 60vw;height: 30vh;display: flex;justify-content: center;}
+.topbuttons{display: flex;justify-content: space-between;}
+.bottembuttons{display: flex;justify-content: end;}
