--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,19 +3,28 @@ body {
   display: grid;
   font-family: "Quicksand", sans-serif;
   /* color: #56536a; */
-  background-color: #F3E9DE;
+  background-color: #f3e9de;
   grid-template-columns: 1fr 4fr;
   /* grid-template-rows: 100vh; */
   margin: 0%;
-  
 }
 
-aside{background-color: #FAF4EC;margin:0%;color: #256993; height: 100vh;}
-footer ul{display: flex;
-flex-direction: row;
-list-style-type: none;
-gap: 1vw;}
-footer{display: grid;justify-content: center;}
+aside {
+  background-color: #faf4ec;
+  margin: 0%;
+  color: #256993;
+  height: 100vh;
+}
+footer ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  gap: 1vw;
+}
+footer {
+  display: grid;
+  justify-content: center;
+}
 /* .take-notes {
   /* display: inline-flex; */
 /* display: grid;
@@ -26,10 +35,38 @@ footer{display: grid;justify-content: center;}
 
 /* } */
 /* nav{order: 1;} */
-.divclass{order: 1;height: 100vh;}
-h1{margin-top: 0;}
-.mainh1{display:flex; justify-content: center;color:#256993 ;}
-.aboutdoc{display: flex;justify-content: end;color: #256993;font-family: "Quicksand",sans-serif;}
-textarea{width: 60vw;height: 30vh;display: flex;justify-content: center;}
-.topbuttons{display: flex;justify-content: space-between;}
-.bottembuttons{display: flex;justify-content: end;}
+.divclass {
+  order: 1;
+  height: 100vh;
+}
+h1 {
+  margin-top: 0;
+}
+.mainh1 {
+  display: flex;
+  justify-content: center;
+  color: #256993;
+}
+.aboutdoc {
+  display: flex;
+  justify-content: end;
+  color: #256993;
+  font-family: "Quicksand", sans-serif;
+}
+textarea {
+  width: 80vw;
+  height: 30vh;
+  display: flex;
+
+  border: 3px solid blue;
+
+  margin: 0.5vw;
+}
+.topbuttons {
+  display: flex;
+  justify-content: space-between;
+}
+.bottembuttons {
+  display: flex;
+  justify-content: end;
+}
