postioned footer and ihe images to the bottem and center of the page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -17,13 +17,21 @@ aside {
 }
 footer ul {
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   list-style-type: none;
   gap: 1vw;
 }
 footer {
-  display: grid;
+  display: flex;
+  /* justify-content: center; */
+  position: absolute;
+  bottom: 0;
+  flex-direction: column;
+  left:50%;
   justify-content: center;
+  align-items: center;
+  
+  
 }
 /* .take-notes {
   /* display: inline-flex; */
@@ -132,4 +140,11 @@ textarea {
     background-color: #375F68;
     background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));
     box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+}
+
+.pfooter
+{
+  display: flex;
+  justify-content: center;
+  color: #256993
 }
