Finished doing media querys so at a max height of 600 the side bar is placed above, no scroll wheel, and used relative units

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,11 +27,9 @@ footer {
   position: absolute;
   bottom: 0;
   flex-direction: column;
-  left:50%;
+  left: 50%;
   justify-content: center;
   align-items: center;
-  
-  
 }
 /* .take-notes {
   /* display: inline-flex; */
@@ -70,7 +68,7 @@ textarea {
   border: 3px solid blue;
 
   margin: 0.5vw;
-  background-color: #FAF4EC;
+  background-color: #faf4ec;
 }
 .topbuttons {
   display: flex;
@@ -83,69 +81,157 @@ textarea {
   flex-direction: row-reverse;
 }
 
-.newnote
-{
+.newnote {
   border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: #375F68;
-    background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: #375f68;
+  background-image: linear-gradient(
+    to top left,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 0)
+  );
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
+    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
 
-.darktheme
-{
+.darktheme {
   border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: #56536A;
-    background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: #56536a;
+  background-image: linear-gradient(
+    to top left,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 0)
+  );
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
+    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
 
-.cancel
-{
+.cancel {
   border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: #9B332C;
-    background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: #9b332c;
+  background-image: linear-gradient(
+    to top left,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 0)
+  );
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
+    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
 
-.save
-{
+.save {
   border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: #375F68;
-    background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: #375f68;
+  background-image: linear-gradient(
+    to top left,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 0)
+  );
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
+    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
 
-.pfooter
-{
+.pfooter {
   display: flex;
   justify-content: center;
-  color: #256993
+  color: #256993;
 }
+
+@media screen and (max-width: 600px) {
+  body {
+    /* display: grid; */
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
+    background-color: #FAF4EC;
+    height: auto;
+    margin: 0;
+    
+  }
+
+  aside {
+    grid-row: 2/3;
+    height: 10vh;
+    position: relative;
+    margin: 0;
+
+
+    /* position: absolute;
+    top: 0;
+    /* left: -20vw;
+    width: 20vw; */
+    /* height: 100vh; */ 
+  }
+
+  main
+  {
+  grid-row: 1/2;
+  display: grid;
+  /* width: 100%; */
+  /* padding: 10% 10% 5% 10%;
+  top: 0%; */
+  /* height: 100vh; */
+  margin: 0;
+  
+  
+  }
+  textarea
+  {
+    width: 97vw;
+    height: 40vh;
+
+  /* height: 50%;
+  width: 100%;
+  resize: none; */
+
+  }
+  nav
+  {
+    height: 15vh;
+  }
+
+  footer {
+    flex-direction: column;
+    align-items: center;
+    left: 0;
+    display: flex;
+    width: 90vw;
+    bottom: 0;
+    position: relative;
+    margin: 0;
+   
+  }
+  .divclass{margin: 0;height: auto;}
+  h1{margin: 0;}
+  .aboutdoc{margin: 0;}
+}
+
