created two functions, darklighttoggle and changetext.DarkLightToggle changes both sides background colours and chnages the text colours to have good color contrast. i mader variables for everythiing i chnaaged above. changetext is a small function which only purpose is to change the text content in darktheme button to light theme when clicked and vice versa

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -167,6 +167,12 @@ textarea {
   color: #256993;
 }
 
+.asidecolor{background-color: #443C68;}
+.bodycolor{background-color: #B8B3CC;}
+.bodytext{color: #000}
+.asidetext{color: #FFFFFF;}
+.textareaColor{background-color: #6D5D6E;}
+
 @media screen and (max-width: 600px) {
   body {
     /* display: grid; */
