created a function called cancelButtonFunction which will hide the text area, cancel button, and save button when the cancel button is clicked. Also added cancelbuttonFunc into css. Deleclared new const

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -172,6 +172,8 @@ textarea {
 .bodytext{color: #000}
 .asidetext{color: #FFFFFF;}
 .textareaColor{background-color: #6D5D6E;}
+.cancelButtonFunc{display: none;}
+
 
 @media screen and (max-width: 600px) {
   body {
